<resources>
    <string name="app_name">buda</string>
    <string name="text_register">注册</string>
    <string name="text_reset_password">重置密码</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_login">登录</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_no_account">没有账号？</string>
    <string name="text_register_now">立即注册</string>
    <string name="text_input_phone_number">请输入手机号</string>
    <string name="text_input_old_password">请输入旧密码</string>
    <string name="text_input_againnew_password">重复输入新密码</string>

    <string name="text_input_verification_code">请输入验证码</string>
    <string name="text_input_number">请输入数量</string>
    <string name="text_area">地区</string>
    <string name="text_has_read">我已经阅读并确认</string>
    <string name="text_protocol">《 buda 用户服务协议》</string>
    <string name="text_need_agree_protocol">请勾选用户协议</string>
    <string name="text_next_step">下一步</string>
    <string name="text_input_invited_code">请输入邀请码</string>
    <string name="text_send_code">发送验证码</string>
    <string name="text_password_limit">请输入6~16位密码</string>
    <string name="text_input_pass_word_repeat">请重复输入</string>
    <string name="text_input_phone_code">请输入验证码</string>
    <string name="text_title_auth">实名认证</string>
    <string name="Recharge_Info">充值详情</string>
    <string name="Add_Address">添加提币地址</string>
    <string name="PayType">支付方式</string>
    <string name="AddPayType">添加收款方式</string>
    <string name="About_Symbol">≈</string>
    <string name="CNY">CNY</string>

    <string name="newApply">新币申购、增发申购</string>
    <string name="notice">公告</string>
    <string name="noticeinfo"></string>

    <string name="text_null"></string>
    <string name="text_input_new_password">请输入新的密码</string>
    <string name="text_done">完成</string>
    <string name="text_reset_password_success">密码重置成功</string>
    <string name="text_regist_success">注册成功</string>
    <string name="text_regist_fail">注册失败</string>
    <string name="auth_input_name">请输入您的姓氏</string>
    <string name="auth_input_id_num">请输入您的身份证号</string>
    <string name="auth_input_card_num">请输入您的证件号</string>
    <string name="auth_input_bankcard">请输入您的银行卡号</string>
    <string name="auth_input_bankname">请输入开户行名称</string>
    <string name="auth_input_pay_account">请核对收款账号与姓名一致</string>
    <string name="auth_input_bank_account">请确认银行卡与姓名一致</string>

    <string name="auth_title_id_num">身份证</string>
    <string name="auth_title_name">姓名</string>
    <string name="auth_commit">提交</string>
    <string name="auth_result_national">国籍</string>
    <string name="auth_result_name">姓名</string>
    <string name="auth_result_id_type">证件类型</string>
    <string name="auth_result_num">证件号码</string>
    <string name="auth_result_success">验证成功</string>
    <string name="text_kline_high">高</string>
    <string name="text_kline_low">低</string>
    <string name="text_one_minutes">1分钟</string>
    <string name="text_five_minutes">5分钟</string>
    <string name="text_one_hour">1小时</string>
    <string name="text_one_day">1天</string>
    <string name="text_more">更多</string>
    <string name="text_24h">24H</string>
    <string name="text_depth">深度</string>
    <string name="text_deal">成交</string>
    <string name="text_intro">简介</string>
    <string name="text_bid">买盘</string>
    <string name="text_offer">卖盘</string>
    <string name="auth_other_type">选择证件类型</string>
    <string name="auth_country_name">名字</string>
    <string name="auth_country_surnam">姓氏</string>
    <string name="auth_input_country_name">请输入您的名字</string>
    <string name="text_total">累计</string>
    <string name="text_price">价格</string>
    <string name="text_amount">数量</string>
    <string name="text_trade">交易</string>
    <string name="text_buy">买入</string>
    <string name="text_sell">卖出</string>
    <string name="text_short">做空</string>
    <string name="text_buy_more">做多</string>
    <string name="home_title_my">我的</string>
    <string name="home_title_trade">交易</string>
    <string name="home_title_price">行情</string>
    <string name="home_title_first">首页</string>
    <string name="xxx">&#160;&#160;</string>
    <string name="x">&#160;</string>

    <string name="sell_amount">卖出数量</string>
    <string name="current_price">当前USDT卖出价:</string>
    <string name="Arrival_rate">到账率：100%</string>
    <string name="Current_Activities">限时活动</string>
    <string name="Confirm_Sell">确定卖出</string>
    <string name="Confirm_Withdraw">确定提币</string>

    <string name="Cancel_Withdraw">取消提币</string>

    <string name="my_login_pay">登录查看我的资产</string>
    <string name="immediately_login">立即登录</string>
    <string name="text_my_order">我的订单</string>
    <string name="title_my_invitation">我的邀请</string>
    <string name="title_set_save">安全设置</string>
    <string name="title_help_center">帮助中心</string>
    <string name="title_online_customer">在线客服</string>
    <string name="title_system_setting">系统设置</string>
    <string name="text_cover_time">平仓时间: &#160;</string>

    <string name="usdt_price">USDT单价</string>
    <string name="buy_num">购买数量</string>
    <string name="amount">总金额</string>
    <string name="starTime">发起时间</string>
    <string name="endTime">完成时间</string>
    <string name="orderStatus">订单状态</string>
    <string name="isTransferAccounts">您是否已完成转账？</string>
    <string name="isExit">您是否退出登录？</string>
    <string name="TransferAccountsPrice">转账金额:</string>
    <string name="MayWithdraw">提币数量</string>
    <string name="add">+ 添加</string>
    <string name="addPayType">+ 添加收款方式</string>

    <string name="Yes">是</string>
    <string name="No">否</string>

    <string name="exit_login">退出登录</string>
    <string name="text_pay_mode">请使用“网银”“手机银行”给以下用户转账</string>

    <string name="RealName">真实姓名</string>
    <string name="copy">复制</string>
    <string name="openbank">开户银行</string>
    <string name="bankaccount">银行卡号</string>
    <string name="account">账号</string>

    <string name="safetycode">安全码</string>
    <string name="buy_becareful">转账时请务必在“转账附言”或备注里填写安全码</string>
    <string name="buy_tips">温馨提示：\n 1. 系统已为您自动匹配OTC商家，请在15分钟内完成转账。\n 2. 超过5笔取消订单，将冻结当天购买权限。 \n 3. 如遇到问题，请联系客服</string>
    <string name="buy_tips_continue">&#160;4. 注意：支付宝信息随时会变更，请您每次充值之前，核实入款 支付宝宝信息。如入款支付宝信息过期给您造成损失，恕不负责。 请见谅，谢谢配合！</string>
    <string name="proposal">请使用银行卡完成转账，否则影响到账</string>
    <string name="transfer_accounts">我已转账</string>
    <string name="afresh_accounts">重新转账</string>
    <string name="account_amount">到账金额</string>
    <string name="verification_code">短信验证码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_usdt_withdraw_address">请输入USDT提币地址</string>
    <string name="address_name">请输入地址名称</string>

    <string name="Collection_Card">收款方式</string>

    <string name="wallet_Tips">温馨提示: \n 1.请勿向上述地址充值任何非USDT资产，否则无法找回。 \n 2.您充值至上述地址后，需2个网络确认后方可到账。 \n 3.每次充值前请务必到本页面复制地址，以防地址更新导致充币失败。</string>

    <string name="text_switch_symbol">选择交易对</string>
    <string name="title_unlogin">未登录</string>
    <string name="text_name_auth">实名认证</string>
    <string name="auth_text_countries_regions">国家地区</string>
    <string name="please_input_name">请输入名字</string>
    <string name="please_input_id">请输入身份证号</string>
    <string name="please_input_Iden_num">请输入证件号码</string>
    <string name="please_input_order_name">请输入名字</string>
    <string name="please_select_idtype">请选择证件类型</string>
    <string name="cancelOrder">取消订单</string>

    <string name="please_input_surname">请输入姓</string>
    <string name="title_order">订单</string>
    <string name="order_empty">暂无订单</string>
    <string name="text_find_new_version">发现新版本</string>
    <string name="market_assets">资产</string>
    <string name="market_latest_price">最新价</string>
    <string name="market_up_down">涨跌幅</string>
    <string name="text_help_center">帮助中心</string>
    <string name="text_help_desc">问题/指南/资料</string>
    <string name="text_news">新闻公告</string>
    <string name="text_news_desc">快讯/文章/公告</string>
    <string name="text_up_rank">涨幅榜</string>
    <string name="text_down_rank">跌幅榜</string>
    <string name="text_deal_rank">成交榜</string>
    <string name="text_holder">当前持有</string>
    <string name="text_all">全部</string>
    <string name="text_total_amount">总额</string>
    <string name="text_leveraged">杠杆</string>
    <string name="text_service_charge">手续费</string>
    <string name="dialog_is_cover">是否平仓？</string>
    <string name="title_cancel">取消</string>
    <string name="title_confirm">确认</string>
    <string name="text_time">时间</string>
    <string name="text_direction">方向</string>
    <string name="text_withdraw">提币</string>
    <string name="text_withdraw_coin">提币币种</string>
    <string name="text_withdraw_address">提币地址</string>
    <string name="text_get_amount">到账数量</string>
    <string name="text_input_withdraw_address">请输入或长按粘贴地址</string>
    <string name="text_withdraw_address_hint">+ 添加提币地址</string>
    <string name="select_withdraw_address_hint">选择提币地址</string>
    <string name="remarks">备注名称</string>
    <string name="select">请选择</string>
    <string name="minNumber">最低</string>
    <string name="maxNumber">最高</string>
    <string name="input">请输入提币数量</string>
    <string name="input_sell">请输入出售数量</string>
    <string name="input_in">请输入购买数量</string>
    <string name="in_record">购买记录</string>
    <string name="recharge_record">充币记录</string>
    <string name="extract_record">提币记录</string>
    <string name="out_record">出售记录</string>

    <string name="comma">，</string>
    <string name="minnumber">最低卖出数量</string>


    <string name="text_recharge_coin">充币币种</string>
    <string name="text_save_qr_code">保存二维码</string>
    <string name="text_copy_address">复制地址</string>
    <string name="text_recharge">充币</string>
    <string name="text_recharge_detail">充值详情</string>
    <string name="text_bill">账单</string>
    <string name="text_welcome">欢迎来到DattEx</string>
    <string name="text_quick_filter">快捷筛选</string>
    <string name="text_in">收入</string>
    <string name="text_fee">手续费</string>
    <string name="text_Trade">交易返佣</string>
    <string name="text_Invite">邀请返佣</string>
    <string name="text_register_reward">注册奖励</string>
    <string name="text_recharge_reward">充值奖励</string>

    <string name="text_out">支出</string>
    <string name="text_ensure">确认</string>
    <string name="text_reset">重置</string>
    <string name="text_publish_date">发行时间</string>
    <string name="text_publish_amount">发行总量</string>
    <string name="text_publish_price">众筹价格</string>
    <string name="text_circulation_amount">流通总量</string>
    <string name="text_website">官网</string>
    <string name="text_block_explore">区块查询</string>
    <string name="buy">买入</string>
    <string name="text_benjin">本金：</string>
    <string name="text_open_price">开仓价格</string>
    <string name="text_yingkui">盈亏</string>
    <string name="text_current_price">当前价格</string>
    <string name="text_place_price">平仓价格</string>
    <string name="text_place_postion">平仓</string>
    <string name="text_order_record">账单明细</string>
    <string name="text_safe">安全设置</string>
    <string name="text_setting">系统设置</string>
    <string name="text_online_recharge">链上充币</string>
    <string name="text_online_withdraw">链上提币</string>

    <string name="X">X</string>

    <string name="apply_unitPrice">申购单价</string>
    <string name="apply_number">申购数量</string>
    <string name="apply_TotalPrice">申购总价</string>

    <string name="apply_coinId">币种</string>
    <string name="USDT">USDT</string>
    <string name="s">s</string>

</resources>
