<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shape_order_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14dp"
            android:layout_alignParentLeft="true"
            android:text="确认订单"
            style="@style/White_TextView_Style"
            >
        </TextView>
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cancel"
            android:textSize="14dp"
            android:textColor="@color/color_FFA3A6BF"></TextView>
    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/color_1A1C29"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"></View>

    <RelativeLayout
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        android:layout_alignParentLeft="true"
        android:text="@string/apply_unitPrice"
        style="@style/White_TextView_Style"></TextView>


        <TextView
            android:id="@+id/tv_unitprice"
            android:layout_toLeftOf="@+id/apply_coinid"
            android:layout_marginRight="20dp"
            android:text="-"
            style="@style/White_TextView_Style"></TextView>

        <TextView
            android:id="@+id/apply_coinid"
            android:layout_alignParentRight="true"
            android:text="@string/USDT"
            style="@style/White_TextView_Style"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/apply_number"
            android:layout_alignParentLeft="true"
            android:text="@string/apply_number"
            style="@style/White_TextView_Style"></TextView>


        <EditText
            android:inputType="number"
            android:lines="1"
            android:singleLine="true"
            android:digits="0123456789"
            android:id="@+id/et_apply_number"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_market_line"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/apply_number_coinid"
            android:layout_toRightOf="@+id/apply_number"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center_vertical|right"
            android:hint="@string/text_input_number"
            android:textColorHint="@color/color_FF767B99"
            android:textSize="12dp"
            android:paddingRight="@dimen/dp_10"
            android:textColor="@color/colorPrimary"
            ></EditText>

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/apply_number_coinid"
            android:layout_alignParentRight="true"
            android:text="@string/USDT"
            style="@style/White_TextView_Style"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentLeft="true"
            android:text="@string/apply_TotalPrice"
            style="@style/White_TextView_Style"></TextView>


        <TextView
            android:id="@+id/tv_total_price"
            android:layout_toLeftOf="@+id/apply_total_coinid"
            android:layout_marginRight="20dp"
            android:text="-"
            style="@style/White_TextView_Style"></TextView>

        <TextView
            android:id="@+id/apply_total_coinid"
            android:layout_alignParentRight="true"
            android:text="@string/USDT"
            style="@style/White_TextView_Style"></TextView>
    </RelativeLayout>
    <TextView
        android:text="@string/verification_code"
        style="@style/White_TextView_Style"></TextView>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_apply_code"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="8"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_checked_4b8beb"
            android:hint="@string/text_input_verification_code"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/color_FFFFFFFF"
            android:textColorHint="@color/color_FF767B99"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_apply_code"
            android:gravity="center"
            android:text="@string/obtain_code"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/drawable_button_ensure"
            style="@style/White_TextView_Style"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_confirm"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_trade_login_background"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/title_confirm"
                android:textColor="@color/color_FFFFFFFF"></TextView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>