<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/color_FF282C42"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.temp.buda.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftIcon="@mipmap/icon_common_back"
        app:titleText="@string/Add_Address"
        app:titleTextColor="@color/color_FFFFFFFF" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_country_back_ground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/text_withdraw_coin"
            android:textColor="@color/color_FFEDEEF2"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_coinid"
            android:layout_toLeftOf="@+id/iv_coinid"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp_10"
            android:textColor="@color/color_FFFFFFFF"
            android:textSize="16dp" />
        <ImageView
            android:id="@+id/iv_coinid"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:src="@mipmap/arrow_bottom" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:text="@string/text_withdraw_address"
        android:textColor="@color/color_FFA3A6BF"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_address"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_usdt_withdraw_address"
            android:maxLength="100"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textColor="@color/color_FFFFFFFF"
            android:textColorHint="@color/color_FFA3A6BF" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_input_buttom_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:text="@string/remarks"
        android:textColor="@color/color_FFA3A6BF"
        android:textSize="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/address_name"
            android:maxLength="100"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:textColor="@color/color_FFFFFFFF"
            android:textColorHint="@color/color_FFA3A6BF" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_input_buttom_line" />
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textColor="@color/color_FFA3A6BF"
            android:textSize="12dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_verificationcode"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="8"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_checked_4b8beb"
            android:hint="@string/text_input_verification_code"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/color_FFFFFFFF"
            android:textColorHint="@color/color_FF767B99"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_verificationcode"
            android:gravity="center"
            android:text="@string/obtain_code"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/drawable_button_ensure"
            style="@style/White_TextView_Style"></TextView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_confirm"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:background="@drawable/drawable_button_ensure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title_confirm"
            style="@style/White_TextView_Style"></TextView>
    </RelativeLayout>
     </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>